# CppResourceManagement

./: .gitignore  CMakeLists.txt  test.cpp
examples/: 01_thread_jthread.cpp  02_false_sharing.cpp  03_deadlock.cpp  04_simplified_deadlock.cpp  05_producer_consumer.cpp
wzorce_projektowe/: producer_consumer.cpp  singelton.cpp
